# market_sniffer_1999

./: .env.example  .gitignore  CHANGELOG.md  README.md  alembic.ini  pyproject.toml  requirements.txt
.mkt/: pyvenv.cfg
config/: collection_profiles.yaml  evidence_rule_registry.yaml  instrument_registry.yaml  metric_explanations.yaml  metric_registry.yaml  series_registry.yaml  source_registry.yaml
docs/: HOW_TO_RUN_MARKET_SNIFFER.md  architecture.md  changelog.md  collector_operations.md  dashboard_operations.md  dashboard_spec.md  data_dictionary.md  decision_log.md  derived_metrics_operations.md  evidence_catalog.md  metric_catalog.md  registries.md  source_registry.md
docs/verification/: data_foundation_24_month_seed.md  data_foundation_live_verification.md  derived_metrics_evidence_phase2.md  yahoo_cleanup_final.md  yahoo_massive_validation_finalization.md
market_sniffer/: __init__.py  cli.py  settings.py
market_sniffer/collectors/: __init__.py  base.py  fred.py  massive.py  yahoo.py
market_sniffer/db/: engine.py  models.py  repository.py
market_sniffer/db/migrations/: env.py
market_sniffer/services/: backfill.py  dates.py  metric_registry.py  metrics.py  quality.py  registry_service.py  retention.py
market_sniffer/services/dashboard/: __init__.py  chart_service.py  evidence_curation.py  explanations.py  formatters.py  service.py  view_models.py
market_sniffer/services/forecasting/: __init__.py
market_sniffer/web/: __init__.py  app.py  extensions.py
tests/: conftest.py  test_foundation.py  test_metrics.py  test_web.py
(+33 files in other folders)
