[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "market-sniffer-2000"
version = "0.1.0"
description = "Data Foundation v1 for Market Sniffer 2000"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "SQLAlchemy>=2.0",
  "PyYAML>=6.0",
  "httpx>=0.27",
  "pandas-market-calendars>=4.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.10",
]
yahoo = [
  "yfinance>=0.2",
]

[project.scripts]
market-sniffer = "market_sniffer.cli:main"

[tool.setuptools.packages.find]
include = ["market_sniffer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
packages = ["market_sniffer"]
ignore_missing_imports = true
